# Vincera

./: README.md  requirements.txt
vincera/: .env.example  .gitignore  __init__.py  config.py  install.ps1  install.sh  installer.py  main.py  pyproject.toml
vincera/agents/: __init__.py  analyst.py  base.py  builder.py  discovery.py  operator.py  research.py  trainer.py  unstuck.py
vincera/builder/: code_generator.py  code_reviewer.py  test_generator.py
vincera/core/: __init__.py  agent_factory.py  authority.py  ghost_mode.py  llm.py  message_handler.py  message_poller.py  ontology.py  orchestrator.py  priority.py  scheduler.py  state.py
vincera/discovery/: __init__.py  company_model.py  database.py  filesystem.py  network.py  scanner.py  spreadsheet.py
vincera/docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  TESTING.md
vincera/execution/: canary.py  deployment_pipeline.py  monitor.py  rollback.py  sandbox.py  shadow.py
vincera/knowledge/: __init__.py  playbook.py  supabase_client.py
vincera/platform/: _base.py  _detection.py  _macos.py
vincera/research/: __init__.py  knowledge_extractor.py  researcher.py  source_validator.py
vincera/tests/: conftest.py  test_agent_factory.py  test_base_agent.py  test_canary.py  test_config.py  test_e2e.py  test_errors.py  test_llm.py  test_main.py  test_migrations.py  test_monitor.py  test_operator.py  test_orchestrator.py  test_platform.py  test_sandbox.py  test_state.py  test_supabase_client.py  test_unstuck.py  test_verification.py
vincera/training/: __init__.py  corrections.py  trainer.py
(+124 files in other folders)
