[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vincera"
version = "0.1.0"
description = "Vincera Bot - Autonomous AI Agent Platform"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "cryptography>=42.0",
    "rich>=13.7",
    "psutil>=5.9",
    "docker>=7.0",
    "watchdog>=4.0",
    "supabase>=2.3",
    "apscheduler>=3.10",
    "aiofiles>=23.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["vincera*"]
